<resources>
    <string name="app_name">App_Update</string>
    <string name="not_installed">No</string>
    <string name="check_update">Check Update</string>
    <string name="updating">It is being updated. Please wait for a second.</string>
    <string name="release_not_found">Release Not Found</string>
    <string name="checking_updates">Checking Update</string>
    <string name="no_updates">No Update</string>
    <string name="updates_available">Update available</string>
    <string name="connection_error">Connection Error</string>
    <string name="msg_no_connection">NO Connection</string>
    <string name="check_wifi">Check Wifi</string>
    <string name="install_non_market_apps" translatable="false">Hey</string>
    <string name="install_non_market_apps_msg" translatable="false">How</string>
    <string name="msg_ok_connection">Wi-Fi or Ethernet connection check.. OK</string>
    <string name="version_installed">Now Version</string>
    <string name="new_version">New Version</string>
    <string name="launcher_app" translatable="false">Launcher</string>
    <string name="ip_app" translatable="false">IP</string>
    <string name="viewer_app" translatable="false">Viewer</string>
    <string name="cable_tester_app" translatable="false">Cable Tester</string>
    <string name="optical_power_meter_app" translatable="false">Optical Power Meter</string>
    <string name="manual_app" translatable="false">Manual</string>
    <string name="update_app" translatable="false">Update</string>
    <string name="tdrc" translatable="false">TDRC</string>
    <string name="tdru" translatable="false">TDRU</string>
    <string name="check">Check</string>
    <string name="update">Update</string>
    <string name="ip_app_update">IP App Update</string>
    <string name="manual_update">Manual Update</string>
    <string name="tdrc_app_update">TDRC App Update</string>
    <string name="tdru_app_update">TDRU App Update</string>
    <string name="update_app_update">Update App Update</string>
    <string name="viewer_app_update">Viewer App Update</string>
    <string name="packet_app_update">Packet App Update</string>
    <string name="launcher_app_update">Launcher Update</string>
    <string name="packet_app" translatable="false">Packet Tool</string>
</resources>
