<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/packet_title"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/packet_app_update"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/btn_manual"
        android:textColor="@color/WhiteSmoke"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/packet_version"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/packet_latest"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/packet_new_version_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/packet_message"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:textColor="@color/WhiteSmoke"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/packet_check_btn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/button_select"
        android:textSize="20sp"
        android:text="@string/check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/packet_update_btn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/button_select"
        android:textSize="20sp"
        android:text="@string/update"
        app:layout_constraintStart_toEndOf="@+id/packet_check_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/packet_now_version_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/version_installed"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/packet_new_version_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/new_version"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/packet_now_version_label"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>