<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tdru_title"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tdru_app_update"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/btn_tdru"
        android:textColor="@color/WhiteSmoke"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tdru_version"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tdru_latest"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:gravity="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/tdru_new_version_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tdru_message"
        android:layout_width="650dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:textColor="@color/WhiteSmoke"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/tdru_check_btn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/button_select"
        android:text="@string/check"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tdru_update_btn"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="452dp"
        android:background="@drawable/button_select"
        android:text="@string/update"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tdru_check_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tdru_now_version_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/version_installed"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tdru_new_version_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/new_version"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/tdru_now_version_label"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="390dp" />

</android.support.constraint.ConstraintLayout>